# poster-to-markdown

./: .gitignore  README.md  pyproject.toml
poster_to_markdown/: cli.py  prompts.py
poster_to_markdown/tools/: arxiv_search.py
