[project]
name = "poster-to-markdown"
version = "0.1.0"
description = "Convert research posters to markdown summaries using OpenAI"
authors = [
    { name = "Seung Hyun Kim", email = "skim0119@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.2.0",
    "asyncio>=3.4.3",
    "click",
    "mcp[cli]>=1.9.1",
    "openai",
    "Pillow",
    "pillow-heif",
    "python-dateutil",
]

[project.scripts]
poster-to-markdown = "poster_to_markdown.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.isort]
known-first-party = ["poster_to_markdown"] 

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]
